--- a/src/content/docs/zen/cp/algorithms/hamming-code.mdx
+++ b/src/content/docs/zen/cp/algorithms/hamming-code.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 
 <Tabs>
-<TabItem value="Code">
+<TabItem label="Code">
 
 ```cpp title="HammingCodeExtended"
 template<int32_t LOG_2_BLOCK_LENGTH>
@@ -41,7 +41,7 @@ public:
 ```
 
 </TabItem>
-<TabItem value="Verify">
+<TabItem label="Verify">
 <div class="verify-tab">
 <div class="verify">
 
