--- a/src/content/docs/zen/cp/data-structures/treap.mdx
+++ b/src/content/docs/zen/cp/data-structures/treap.mdx
@@ -48,7 +48,7 @@ namespace Treap {
 ## Treap with Implicit Key
 
 <Tabs>
-<TabItem value="Code">
+<TabItem label="Code">
 
 ```cpp title="ImplicitTreap"
 std::mt19937 gen(3);
@@ -177,7 +177,7 @@ public:
 ```
 
 </TabItem>
-<TabItem value="Verify">
+<TabItem label="Verify">
 <div class="verify-tab">
 <div class="verify">
 
