--- a/src/content/docs/zen/cp/math/gcd.mdx
+++ b/src/content/docs/zen/cp/math/gcd.mdx
@@ -60,7 +60,7 @@ int64_t binaryGCD(int64_t a, int64_t b) {
     {label: 'Verify', value: 'verify'},
   ]}>
 
-  <TabItem value="code">
+  <TabItem label="code">
 
   ```cpp
   tuple<int64_t, int64_t> extendedEuclidRecursive(uint64_t a, uint64_t b) {
@@ -72,7 +72,7 @@ int64_t binaryGCD(int64_t a, int64_t b) {
 
   </TabItem>
 
-  <TabItem value="verify">
+  <TabItem label="verify">
 
   ```cpp
   void solve() {
