--- a/src/content/docs/zen/cp/string/suffix-array.mdx
+++ b/src/content/docs/zen/cp/string/suffix-array.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 
 <Tabs>
-<TabItem value="Code">
+<TabItem label="Code">
 
 ```cpp title="Algorithm :: sort_cyclic_shifts | String :: suffix_array"
 namespace Algorithm {
@@ -60,7 +60,7 @@ namespace String {
 ```
 
 </TabItem>
-<TabItem value="Verify">
+<TabItem label="Verify">
 <div class="verify-tab">
 <div class="verify">
 
