--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,20 +5,20 @@ template: splash
 hero:
   tagline: Welcome to Vamsi's Digital Garden
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/logo-light.webp
   actions:
-    - text: Home
+    - text: Let's go!
       link: /digital-garden/home
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+    # - text: Read the Starlight docs
+    #   link: https://starlight.astro.build
+    #   icon: external
+    #   variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+{/* ## Next steps
 
 <CardGrid stagger>
 	<Card title="Update content" icon="pencil">
@@ -33,4 +33,4 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Read the docs" icon="open-book">
 		Learn more in [the Starlight Docs](https://starlight.astro.build/).
 	</Card>
-</CardGrid>
+</CardGrid> */}
