--- a/src/content/docs/zen/cp/graph/dijkstra.mdx
+++ b/src/content/docs/zen/cp/graph/dijkstra.mdx
@@ -12,7 +12,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 ## Code
 
 <Tabs>
-<TabItem value="Code">
+<TabItem label="Code">
 
 ```cpp title="Graph::dijkstra"
 namespace Graph {
@@ -51,7 +51,7 @@ namespace Graph {
 ```
 
 </TabItem>
-<TabItem value="Verify">
+<TabItem label="Verify">
 <div class="verify-tab">
 <div class="verify">
 
