--- a/src/content/docs/zen/cp/problems/largest-rectangle-in-histogram.mdx
+++ b/src/content/docs/zen/cp/problems/largest-rectangle-in-histogram.mdx
@@ -6,7 +6,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 
 <Tabs>
-<TabItem value="Code">
+<TabItem label="Code">
 
 ```cpp title="Problem :: largestRectangleArea" {16}
 namespace Problem {
@@ -34,7 +34,7 @@ namespace Problem {
 ```
 
 </TabItem>
-<TabItem value="Verify">
+<TabItem label="Verify">
 <div class="verify-tab">
 <div class="verify">
 
