--- a/src/content/docs/zen/cp/problems/largest-sum-of-contiguous-subarray-no-larger-than-k.mdx
+++ b/src/content/docs/zen/cp/problems/largest-sum-of-contiguous-subarray-no-larger-than-k.mdx
@@ -6,7 +6,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 
 <Tabs>
-<TabItem value="Code">
+<TabItem label="Code">
 
 ```cpp title="Problem :: anyMaxSubArraySumLessThanK" {6,12}
 namespace Problem {
@@ -38,7 +38,7 @@ namespace Problem {
 ```
 
 </TabItem>
-<TabItem value="Verify">
+<TabItem label="Verify">
 <div class="verify-tab">
 <div class="verify">
 
