--- a/src/content/docs/zen/cp/string/kmp.mdx
+++ b/src/content/docs/zen/cp/string/kmp.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 
 <Tabs>
-<TabItem value="Code">
+<TabItem label="Code">
 
 ```cpp title="Algorithm::prefix_function | String::prefix_function"
 namespace Algorithm {
@@ -32,7 +32,7 @@ namespace String {
 ```
 
 </TabItem>
-<TabItem value="Verify">
+<TabItem label="Verify">
 <div class="verify-tab">
 <div class="verify">
 
